# gl_simple_game_engine

./: .gitignore  BouncePhysics.cpp  BouncePhysics.h  CMakeLists.txt  Enemy.cpp  Enemy.h  OutOfBoundsScript.cpp  OutOfBoundsScript.h  README.md  spinning_cube.cpp
engine/: .gitignore  BezierUtils.cpp  BezierUtils.h  CMakeLists.txt  Camera.cpp  Camera.h  Collider.cpp  Collider.h  GameEngine.cpp  GameEngine.h  InputSystem.cpp  InputSystem.h  Light.cpp  Light.h  Material.cpp  Material.h  Model.cpp  Model.h  Object.cpp  Object.h  Script.cpp  Script.h  ShaderProgram.cpp  ShaderProgram.h  TextureUtils.cpp  TextureUtils.h  Vertex.h
engine/materials/: MatteLightGreen.cpp  MatteLightGreen.h  MatteSkyBlue.cpp  MatteSkyBlue.h  MetallicOrange.cpp  MetallicOrange.h
engine/math/: Quaternion.cpp  Quaternion.h
engine/models/: ColoredCube.cpp  ColoredCube.h  Plane.cpp  Plane.h  PlaneTextured.cpp  PlaneTextured.h
engine/objects/: Cube.cpp  Cube.h  ParticleSystem.cpp  ParticleSystem.h  Plane.cpp  Plane.h  TexturedPlane.cpp  TexturedPlane.h
engine/scripts/: CloseOnEscape.cpp  CloseOnEscape.h  SimpleMovement.cpp  SimpleMovement.h  SimplePhysics.cpp  SimplePhysics.h
engine/shaders/: ColorGouradShader.cpp  ColorGouradShader.h  ColorPhongShader.cpp  ColorPhongShader.h  ParticleShader.cpp  ParticleShader.h  SecondPassShader.cpp  SecondPassShader.h  SkyboxShader.cpp  SkyboxShader.h  TextureGouradShader.cpp  TextureGouradShader.h
engine/shaders/glsl/: colorPhong.f.glsl  colorPhong.v.glsl
